durga@48demo.com.bleadtest/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Attemdees_Mapping__c</fullName>
        <description>This is for testing not confirmed</description>
        <label>Attemdees Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyAddr1__c</fullName>
        <label>CompanyAddr1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyAddr2__c</fullName>
        <label>CompanyAddr2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCity__c</fullName>
        <label>CompanyCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCountry__c</fullName>
        <label>CompanyCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyFaxNumber__c</fullName>
        <label>CompanyFaxNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CompanyState__c</fullName>
        <label>CompanyState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_website__c</fullName>
        <label>Company_website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Companyphone__c</fullName>
        <label>Companyphone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States of America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventDetail_DIVs_Help__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EventDetail DIVs Help</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Detail_help__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Event Detail help</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FaceBookId__c</fullName>
        <label>FaceBookId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourSqareId__c</fullName>
        <label>FourSqareId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedInId__c</fullName>
        <label>LinkedInId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoBox__c</fullName>
        <label>PoBox</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TwitterId__c</fullName>
        <label>TwitterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_website__c</fullName>
        <label>user_website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
</CustomObject>